Bug/remove nexchange manager (#261)
* add amount to Deposit QR's (#255)

* add amount to Deposit QR's

* Add names to crypto currencies fixtures, remove backend currency searches parameter name to code

* Fix tests

* Add screenshot path print on selenium tests (#258)

* Add screenshot path print on selenium tests

* Path to the screenshot print

* replace path to workflow parameter on the screenshot print

* WIP payment preferences (#257)

* Support for all currencies

* all parit WIP

* all currencies VISA MASTERCARD fixtures WIP

* removed screenshots

* remove screenshots 2

* WIP correct fixture layout

* fix cc cards names, remove send order mail on local

* articles merge migration

* remove duplicate from webpack bundle

* change visa class

* comment out qiwi from Selenium UI tests

* fix selenium xpath

* fix tests

* add password protection to staging (#260)

* remove redundant settings from staging settings

* correct .htpasswd file path

* fix type mapping

* Remove nexchange manager

* Add backend tests before selenium

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,18 +14,6 @@
     border-bottom: 0;
 }
 
-#UserAccountModal .modal-body,
-#PayMethModal .modal-body{
-    padding-left: 0;
-}
-
-#UserAccountModal .modal-footer,
-#PayMethModal .modal-footer{
-    margin: 0 25px;
-    padding-right: 0;
-    border-color: black;
-}
-
 .modal.fade.in .modal-footer {
     border: 0;
 }
@@ -1285,7 +1273,7 @@ p.support-link a{
 	margin-bottom: 10px;
 }
 
-.sellMethModal input {
+.add_payout_method input {
     display: block;
     height: 50px;
     width: 100%;
@@ -1309,6 +1297,7 @@ p.support-link a{
 
 .sell-img {
     margin: 10px 0;
+    max-width: 100px;
 }
 .modal-body .phone.val, .modal-body .intl-tel-input {
     width: 100%;
@@ -1316,7 +1305,7 @@ p.support-link a{
 }
 
 .payment-type-trigger img.paypal,
-.payment-type-trigger img.visa,
+.payment-type-trigger img.visa-internal,
 .payment-type-trigger img.sepa,
 .payment-type-trigger img.qiwi {
     width: 100px;
@@ -1375,12 +1364,16 @@ margin-right: 15px;
 li.select2-results__option.select2-results__option--highlighted {
    background-color: #8cc63f !important;
 }
-
+li.select2-results__option:first {
+	display: initial;
+}
 .select2-results__option {
     min-width: 80px !important;
     text-align: center;
     border-radius: 5px;
+    max-width: 48%;
     margin: 5px;
+    /* display: inline-block !important; */
 }
 
 .select2-container--default .select2-selection--single .select2-selection__arrow {
