--- a/templates/payments/partials/modals/sell.html
+++ b/templates/payments/partials/modals/sell.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 {% load static %}
 <!-- Modal -->
-<div class="modal fade sellMethModal" id="{{ id }}" role="dialog">
+<div class="modal fade add_payout_method" id="{{ id }}" role="dialog">
     <div class="modal-dialog">
       <!-- Modal content-->
       <div class="modal-content">
