--- a/templates/orders/partials/modals/order_success_buy.html
+++ b/templates/orders/partials/modals/order_success_buy.html
@@ -1,6 +1,7 @@
 {% extends 'orders/partials/modals/success_order.html' %}
 {%  load i18n %}
 {% load tz %}
+{% load payments_filters %}
 
 {% block modal_content %}
 <div class="panel panel-success">
@@ -57,7 +58,7 @@
                     <p><strong>{{unique_ref}}</strong></p>
                 </div>
             </div>
-            {% if order.payment_preference.payment_method.name == 'Okpay' %}
+            {% if order.payment_preference.payment_method.name|upper|is_in:'OKPAY,VISA' %}
             <div class="row">
                 <div class="col col-xs-10 col-xs-offset-1 success-line mid">
                     <span class="line green">
