--- a/templates/payments/partials/modals/card.html
+++ b/templates/payments/partials/modals/card.html
@@ -1,25 +1,5 @@
-{% load static %}
-{% load i18n %}
-{% if card.enabled or type == 'sell' %}
-    <div class="col col-xs-6 col-md-3 payment-type-trigger"
-         data-type="{{ card_type }}"
-         data-label="{{ label }}"
-         data-identifier="{{ card.identifier }}">
-        <div class="col col-sm-12 payment-trigger-image">
-                <span class="helper"></span>
-                <img src="{% static icon %}"
-                     alt="{% trans label %}"
-                     class="payment-method-icon {{ card_type }} {{ extra_class}}">
-        </div>
-        <div class="col col-xs-12">
-            <div class="payment-label">
-                <div class="payment-label-inner">
-                    {% trans label|default:card_type %}
-                    <span class="round-button">
-                        <a href="#"> ></a>
-                    </span>
-                </div>
-            </div>
-        </div>
-    </div>
+{% if is_buy and card.buy_enabled %}
+    {% include 'payments/partials/modals/card_inner.html' %}
+{% elif not is_buy and card.sell_enabled  %}
+        {% include 'payments/partials/modals/card_inner.html' %}
 {% endif %}
