--- a/templates/core/partials/spa_navigation.html
+++ b/templates/core/partials/spa_navigation.html
@@ -6,11 +6,11 @@
         <i class="fa fa-chevron-right"></i>
     </span>
     {% else %}
-        <span class="price_box_next next-step sell-go hidden">
+        <span class="price_box_next next-step sell-go-hidden hidden">
             {% trans 'Sell' %}
             <i class="fa fa-chevron-right"></i>
         </span>
-        <span class="price_box_next next-step buy-go">
+        <span class="price_box_next next-step buy-go-hidden hidden">
             {% trans 'Buy' %}
             <i class="fa fa-chevron-right"></i>
         </span>
