--- a/templates/orders/partials/steps/step_amount.html
+++ b/templates/orders/partials/steps/step_amount.html
@@ -38,7 +38,7 @@
             <div class="col-xs-5 price_box price_box_ticker">
                 <span class="rate rate-sell"></span><br>
                 <span class="currency"></span><br>
-                <a href="#" class="price_box2_a trigger trigger trigger-sell">{% trans "Sell" %}</a></div>
+                <a href="#" class="price_box2_a trigger trigger-sell">{% trans "Sell" %}</a></div>
         </div>
         <div class="row">
             <div class="col-xs-5 price_box" id="pricebox_rub">
