--- a/templates/payments/partials/forms/base_from.html
+++ b/templates/payments/partials/forms/base_from.html
@@ -1,3 +1,5 @@
-<input type="hidden" value="{{ method }}" class="method">
-{% block form %}
-{% endblock %}
+<form action="" class="card-from">
+    <input type="hidden" value="{{ method }}" class="method">
+    {% block form %}
+    {% endblock %}
+</form>
