--- a/templates/verification/upload.html
+++ b/templates/verification/upload.html
@@ -22,8 +22,7 @@
             {% bootstrap_form form %}
             <input type="submit" name="submit" id="submit" class="btn btn-success btn-lg" value="{% trans "Upload" %}"/>
         </form>
-
-		<div class="table-responsive visible-md visible-lg ">
+		<div class="table-responsive hidden-xs">
 			  <table class=" table-hover table-condensed col-lg-12">
   				<tr class="table-order">
                     <th >{% trans "Created on" %}</th>
