--- a/templates/payments/partials/forms/email.html
+++ b/templates/payments/partials/forms/email.html
@@ -13,7 +13,7 @@
     <div class="row">
         <div class="col col-lg-10 col-sm-offset-1 text-left">
             <label for="phone">{% trans 'Account Email' %}</label>
-            <input type="text" name="acoount-number" class="account-number val"
+            <input type="text" name="email" class="account-number val"
                {% if user.is_authenticated %}value="{{ user.email }}"{% endif %} placeholder="{% trans 'Account Email' %}">
             {% if user.is_authenticated and not user.email %}
                 <input type="checkbox" id="profile-save-checkbox" value="1">
