remove redundant brace from card view

--- a/templates/payments/partials/modals/card_inner.html
+++ b/templates/payments/partials/modals/card_inner.html
@@ -4,8 +4,7 @@
      data-type="{{ card_type }}"
      data-label="{{ label }}"
      data-identifier="{{ card.identifier }}"
-     data-fee_deposit="{{ card.payment_method.fee_deposit }}">>
-
+     data-fee_deposit="{{ card.payment_method.fee_deposit }}">
     <div class="col col-sm-12 payment-trigger-image">
             <span class="helper"></span>
             <img src="{% static icon %}"
