fed validation + updated transalation files

--- a/templates/payments/partials/forms/base_from.html
+++ b/templates/payments/partials/forms/base_from.html
@@ -1,4 +1,4 @@
-<form action="" class="card-from">
+<form action="" class="card-form">
     <input type="hidden" value="{{ method }}" class="method">
     {% block form %}
     {% endblock %}
